Added job title

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       <section>
         <h3>Code is Science</h3>
         <img src="project-thumbnail.png" alt="description of image">
-        <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+        <p>Code is Science is journal policy tracker, that checks if scientific code has policies implemented and is
+          reproducible</p>
         <a href="#" target="_blank">View project / case study</a>
       </section>
       <!-- End of Project block. -->
@@ -44,8 +45,8 @@
 
       <!-- Copy this whole <section> block to add more jobs. -->
       <section>
-        <h3>Job title</h3>
-        <p>Company Name</p>
+        <h3>Digital Designer</h3>
+        <p>Black Dot</p>
         <p>Date at job</p>
         <p>Job summary goes here. Add as many paragraphs as you need.</p>
         <p>Optional list:</p>
