Finish portofolio section

--- a/index.html
+++ b/index.html
@@ -41,21 +41,13 @@
     <!-- ***********************  WORK EXPERIENCE  *********************** -->
     <section>
       <h2>Work Experience</h2>
-      <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
-
       <!-- Copy this whole <section> block to add more jobs. -->
       <section>
         <h3>Digital Designer</h3>
         <p>Black Dot</p>
-        <p>Date at job</p>
-        <p>Job summary goes here. Add as many paragraphs as you need.</p>
-        <p>Optional list:</p>
-        <ul>
-          <li>Delete this list if you don't need it.</li>
-          <li>Created...</li>
-          <li>Lead...</li>
-          <li>Responsible for...</li>
-        </ul>
+        <p>June, 2019</p>
+        <p>Responsible for all digital related work including social media management, chatbots, web design and
+          development, app design and development, designs, content strategy, digital marketing...</p>
       </section>
       <!-- End of Job block. -->
     </section>
@@ -66,9 +58,9 @@
 
       <!-- Copy this whole <section> block to add more schools. -->
       <section>
-        <h3>School name - City</h3>
-        <p>Designation received or program name, year attended</p>
-        <p>Summary or accomplishments.</p>
+        <h3>University of Greenwich</h3>
+        <p>BSc (Hons) Computing</p>
+        <p>Honours Degree</p>
       </section>
       <!-- End of School block. -->
     </section>
@@ -79,8 +71,8 @@
 
       <!-- Social media and contact links. Add or remove any networks. -->
       <ul>
-        <li><a href="mailto:email@example.com">email@example.com</a></li>
-        <li><a href="http://yourwebsite.com" target="_blank">yourwebsite.com</a></li>
+        <li><a href="mailto:email@example.com">isaac@ikayz.com</a></li>
+        <li><a href="http://ikayz.github.io" target="_blank">ikayz.github.io</a></li>
         <li><a href="#" target="_blank">Twitter</a></li>
         <li><a href="#" target="_blank">LinkedIn</a></li>
         <li><a href="#" target="_blank">Facebook</a></li>
