Add CSS and styles file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <!-- Copy the whole <section> block to add more projects. -->
       <section>
         <h3>Code is Science</h3>
-        <img src="project-thumbnail.png" alt="description of image">
+        <img src="images/thumbnail-2.jpg" alt="description of image">
         <p>Code is Science is journal policy tracker, that checks if scientific code has policies implemented and is
           reproducible</p>
         <a href="#" target="_blank">View project / case study</a>
