--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main>
     <!-- ***********************  ABOUT / PROFILE  *********************** -->
-    <header>
+    <header class="about">
       <h1>Isaac Miti</h1>
       <h2>To each their own</h2>
 
@@ -23,7 +23,7 @@
     </header>
 
     <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
-    <section>
+    <section class="projects">
       <h2>Featured Projects</h2>
       <p>View selected projects below. More information can be found at <a href="http://ikayz.github.io">ikayz</a></p>
 
@@ -39,7 +39,7 @@
     </section>
 
     <!-- ***********************  WORK EXPERIENCE  *********************** -->
-    <section>
+    <section class="work-experience">
       <h2>Work Experience</h2>
       <!-- Copy this whole <section> block to add more jobs. -->
       <section>
@@ -53,7 +53,7 @@
     </section>
 
     <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-    <section>
+    <section class="education">
       <h2>Education</h2>
 
       <!-- Copy this whole <section> block to add more schools. -->
