Add content wrapper to all sections

--- a/index.html
+++ b/index.html
@@ -12,72 +12,82 @@
   <main>
     <!-- ***********************  ABOUT / PROFILE  *********************** -->
     <header class="about">
-      <h1>Isaac Miti</h1>
-      <h2>To each their own</h2>
+      <div class="content-wrap">
+        <h1>Isaac Miti</h1>
+        <h2>To each their own</h2>
 
-      <p>I am a front end developer, aspiring mobile developer currently learning Android. I contribute to open source
-        projects in my spare time. I play Fortnite on a regular basis. My GitHub username is <em>ikayz</em> Here is
-        some dummy text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida
-        efficitur, risus neque scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit
-        amet hendrerit ante.</p>
-      <p>Consistency is key when it comes to getting good at something</p>
+        <p>I am a front end developer, aspiring mobile developer currently learning Android. I contribute to open source
+          projects in my spare time. I play Fortnite on a regular basis. My GitHub username is <em>ikayz</em> Here is
+          some dummy text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida
+          efficitur, risus neque scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit
+          amet hendrerit ante.</p>
+        <p>Consistency is key when it comes to getting good at something</p>
+      </div>
     </header>
 
     <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
     <section class="projects">
-      <h2>Featured Projects</h2>
-      <p>View selected projects below. More information can be found at <a href="http://ikayz.github.io">ikayz</a></p>
+      <div class="content-wrap">
+        <h2>Featured Projects</h2>
+        <p>View selected projects below. More information can be found at <a href="http://ikayz.github.io">ikayz</a></p>
 
-      <!-- Copy the whole <section> block to add more projects. -->
-      <section>
-        <h3>Code is Science</h3>
-        <img src="images/thumbnail-2.jpg" alt="description of image">
-        <p>Code is Science is journal policy tracker, that checks if scientific code has policies implemented and is
-          reproducible</p>
-        <a href="#" target="_blank">View project / case study</a>
-      </section>
-      <!-- End of Project block. -->
+        <!-- Copy the whole <section> block to add more projects. -->
+        <section>
+          <h3>Code is Science</h3>
+          <img src="images/thumbnail-2.jpg" alt="description of image">
+          <p>Code is Science is journal policy tracker, that checks if scientific code has policies implemented and is
+            reproducible</p>
+          <a href="#" target="_blank">View project / case study</a>
+        </section>
+        <!-- End of Project block. -->
+      </div>
     </section>
 
     <!-- ***********************  WORK EXPERIENCE  *********************** -->
     <section class="work-experience">
-      <h2>Work Experience</h2>
-      <!-- Copy this whole <section> block to add more jobs. -->
-      <section>
-        <h3>Digital Designer</h3>
-        <p>Black Dot</p>
-        <p>June, 2019</p>
-        <p>Responsible for all digital related work including social media management, chatbots, web design and
-          development, app design and development, designs, content strategy, digital marketing...</p>
-      </section>
-      <!-- End of Job block. -->
+      <div class="content-wrap">
+        <h2>Work Experience</h2>
+        <!-- Copy this whole <section> block to add more jobs. -->
+        <section>
+          <h3>Digital Designer</h3>
+          <p>Black Dot</p>
+          <p>June, 2019</p>
+          <p>Responsible for all digital related work including social media management, chatbots, web design and
+            development, app design and development, designs, content strategy, digital marketing...</p>
+        </section>
+        <!-- End of Job block. -->
+      </div>
     </section>
 
     <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
     <section class="education">
-      <h2>Education</h2>
+      <div class="content-wrap">
+        <h2>Education</h2>
 
-      <!-- Copy this whole <section> block to add more schools. -->
-      <section>
-        <h3>University of Greenwich</h3>
-        <p>BSc (Hons) Computing</p>
-        <p>Honours Degree</p>
-      </section>
-      <!-- End of School block. -->
+        <!-- Copy this whole <section> block to add more schools. -->
+        <section>
+          <h3>University of Greenwich</h3>
+          <p>BSc (Hons) Computing</p>
+          <p>Honours Degree</p>
+        </section>
+        <!-- End of School block. -->
+      </div>
     </section>
 
     <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
     <footer>
-      <h2>Let's Keep in Touch!</h2>
+      <div class="content-wrap">
+        <h2>Let's Keep in Touch!</h2>
 
-      <!-- Social media and contact links. Add or remove any networks. -->
-      <ul>
-        <li><a href="mailto:email@example.com">isaac@ikayz.com</a></li>
-        <li><a href="http://ikayz.github.io" target="_blank">ikayz.github.io</a></li>
-        <li><a href="#" target="_blank">Twitter</a></li>
-        <li><a href="#" target="_blank">LinkedIn</a></li>
-        <li><a href="#" target="_blank">Facebook</a></li>
-      </ul>
+        <!-- Social media and contact links. Add or remove any networks. -->
+        <ul>
+          <li><a href="mailto:email@example.com">isaac@ikayz.com</a></li>
+          <li><a href="http://ikayz.github.io" target="_blank">ikayz.github.io</a></li>
+          <li><a href="#" target="_blank">Twitter</a></li>
+          <li><a href="#" target="_blank">LinkedIn</a></li>
+          <li><a href="#" target="_blank">Facebook</a></li>
+        </ul>
+      </div>
     </footer>
   </main>
 </body>
