Update portofolio description and job title

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <header class="about">
       <div class="content-wrap">
         <h1>Isaac Miti</h1>
-        <h2>To each their own</h2>
+        <h2>Digital Designer + Developer + Open Source Contributor</h2>
 
-        <p>I am a front end developer, aspiring mobile developer currently learning Android. I contribute to open source
-          projects in my spare time. I play Fortnite on a regular basis. My GitHub username is <em>ikayz</em> Here is
-          some dummy text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida
-          efficitur, risus neque scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit
-          amet hendrerit ante.</p>
+        <p>I am a digital designer, front end developer, aspiring mobile developer currently learning Android. I
+          contribute to open source
+          projects in my spare time. I play Fortnite on a regular basis. My GitHub username is <em>ikayz</em>. I have
+          been learning mobile development in Android using Kotlin. I practice my Android and Kotlin skills everytime I
+          get the chance.</p>
         <p>Consistency is key when it comes to getting good at something</p>
       </div>
     </header>
