--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My CSS Portolio | Isaac Miti</title>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Montserrat:wght@400;600&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -14,7 +16,7 @@
     <header class="about">
       <div class="content-wrap">
         <h1>Isaac Miti</h1>
-        <h2>Digital Designer + Developer + Open Source Contributor</h2>
+        <h2>Digital Designer + Front-end Developer</h2>
 
         <p>I am a digital designer, front end developer, aspiring mobile developer currently learning Android. I
           contribute to open source
