--- a/index.html
+++ b/index.html
@@ -34,11 +34,21 @@
         <p>View selected projects below. More information can be found at <a href="http://ikayz.github.io">ikayz</a></p>
 
         <!-- Copy the whole <section> block to add more projects. -->
-        <section>
+        <section class="project-item-1">
           <h3>Code is Science</h3>
           <img src="images/thumbnail-2.jpg" alt="description of image">
           <p>Code is Science is journal policy tracker, that checks if scientific code has policies implemented and is
             reproducible</p>
+          <a href="#" target="_blank">View project / case study</a>
+        </section>
+
+        <section class="project-item-1">
+          <h3>Public Lab - Open Source Contributor</h3>
+          <img src="images/thumbnail-3.jpg" alt="description of image">
+          <p>Public Lab is a community and a non-profit, democratizing science to address environmental issues that
+            affect people. Public Lab was formed in the wake of the BP oil disaster. Learn more about our roots and 10th
+            anniversary.
+          </p>
           <a href="#" target="_blank">View project / case study</a>
         </section>
         <!-- End of Project block. -->
