--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h2>Let's Keep in Touch!</h2>
 
         <!-- Social media and contact links. Add or remove any networks. -->
-        <ul>
+        <ul class="contact-list">
           <li><a href="mailto:email@example.com">isaac@ikayz.com</a></li>
           <li><a href="http://ikayz.github.io" target="_blank">ikayz.github.io</a></li>
           <li><a href="#" target="_blank">Twitter</a></li>
