--- a/index.html
+++ b/index.html
@@ -60,12 +60,27 @@
       <div class="content-wrap">
         <h2>Work Experience</h2>
         <!-- Copy this whole <section> block to add more jobs. -->
-        <section>
-          <h3>Digital Designer</h3>
-          <p>Black Dot</p>
-          <p>June, 2019</p>
-          <p>Responsible for all digital related work including social media management, chatbots, web design and
-            development, app design and development, designs, content strategy, digital marketing...</p>
+        <section class="job-item">
+          <div class="job-details">
+            <h3>Digital Designer</h3>
+            <p>Black Dot</p>
+            <p>June, 2019 - Present</p>
+          </div>
+          <div class="job-summary">
+            <p>Responsible for all digital related work including social media management, chatbots, web design and
+              development, app design and development, designs, content strategy, digital marketing...</p>
+          </div>
+        </section>
+
+        <section class="job-item">
+          <div class="job-details">
+            <h3>Junior Developer</h3>
+            <p>Pynch Technology</p>
+            <p>December, 2018 - June, 2019</p>
+          </div>
+          <div class="job-summary">
+            <p>Responsible for maintaining, feature enhancement, fixes, updates, and running of client websites</p>
+          </div>
         </section>
         <!-- End of Job block. -->
       </div>
