Add responsive width to education and background image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
     <section class="projects">
-      <div class="content-wrap">
+      <div class="content-wrap divider">
         <h2>Featured Projects</h2>
         <p>View selected projects below. More information can be found at <a href="http://ikayz.github.io">ikayz</a></p>
 
@@ -57,7 +57,7 @@
 
     <!-- ***********************  WORK EXPERIENCE  *********************** -->
     <section class="work-experience">
-      <div class="content-wrap">
+      <div class="content-wrap item-details divider">
         <h2>Work Experience</h2>
         <!-- Copy this whole <section> block to add more jobs. -->
         <section class="job-item">
@@ -87,7 +87,7 @@
     </section>
 
     <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-    <section class="education">
+    <section class="education item-details">
       <div class="content-wrap">
         <h2>Education</h2>
 
@@ -95,7 +95,19 @@
         <section>
           <h3>University of Greenwich</h3>
           <p>BSc (Hons) Computing</p>
-          <p>Honours Degree</p>
+          <p>Honours Degree - 2021</p>
+        </section>
+
+        <section>
+          <h3>Cyber Academy</h3>
+          <p>Higher Diploma in Management of Information Systems</p>
+          <p>Higher Diploma - 2016</p>
+        </section>
+
+        <section>
+          <h3>Cyber Academy</h3>
+          <p>Diploma in Management of Information Systems</p>
+          <p>Diploma - 2014</p>
         </section>
         <!-- End of School block. -->
       </div>
