Add actual links to contact section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>Featured Projects</h2>
         <p>View selected projects below. More information can be found at <a href="http://ikayz.github.io">ikayz</a></p>
 
-        <!-- Copy the whole <section> block to add more projects. -->
+        <!-- Project Items -->
         <section class="project-item">
           <img src="images/thumbnail-2.jpg" alt="description of image">
           <h3>Code is Science</h3>
@@ -59,7 +59,7 @@
     <section class="work-experience">
       <div class="content-wrap item-details divider">
         <h2>Work Experience</h2>
-        <!-- Copy this whole <section> block to add more jobs. -->
+        <!-- Work Items -->
         <section class="job-item">
           <div class="job-details">
             <h3>Digital Designer</h3>
@@ -91,7 +91,7 @@
       <div class="content-wrap">
         <h2>Education</h2>
 
-        <!-- Copy this whole <section> block to add more schools. -->
+        <!-- Education Items -->
         <section>
           <h3>University of Greenwich</h3>
           <p>BSc (Hons) Computing</p>
@@ -118,13 +118,12 @@
       <div class="content-wrap">
         <h2>Let's Keep in Touch!</h2>
 
-        <!-- Social media and contact links. Add or remove any networks. -->
+        <!-- Social media and contact links -->
         <ul class="contact-list">
-          <li><a href="mailto:email@example.com">isaac@ikayz.com</a></li>
+          <li><a href="mailto:ikayz@live.com">ikayz@live.com</a></li>
           <li><a href="http://ikayz.github.io" target="_blank">ikayz.github.io</a></li>
-          <li><a href="#" target="_blank">Twitter</a></li>
-          <li><a href="#" target="_blank">LinkedIn</a></li>
-          <li><a href="#" target="_blank">Facebook</a></li>
+          <li><a href="https://twitter.com/ikayz360" target="_blank">Twitter</a></li>
+          <li><a href="https://www.linkedin.com/in/isaac-miti/" target="_blank">LinkedIn</a></li>
         </ul>
       </div>
     </footer>
