Add non placeholder images to projects section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <!-- Project Items -->
         <section class="project-item">
-          <img src="images/thumbnail-2.jpg" alt="description of image">
+          <img src="images/code-is-science.png" alt="description of image">
           <h3>Code is Science</h3>
           <p>Code is Science is journal policy tracker, that checks if scientific code has policies implemented and is
             reproducible</p>
@@ -43,7 +43,7 @@
         </section>
 
         <section class="project-item">
-          <img src="images/thumbnail-3.jpg" alt="description of image">
+          <img src="images/public-lab.png" alt="description of image">
           <h3>Public Lab - Open Source Contributor</h3>
           <p>Public Lab is a community and a non-profit, democratizing science to address environmental issues that
             affect people. Public Lab was formed in the wake of the BP oil disaster. Learn more about our roots and 10th
